# scray

./: .gitattributes  .gitignore  .travis.yml  CNAME  LICENSE.txt  README.md  f  index.html  params.json  pom.xml
.github/workflows/: maven.yml
projects/: README.md  pom.xml
projects/edge/: README.md
projects/invoice-hyperleder-fabric/: README.md
projects/invoice-hyperledger-fabric/: .gitignore  Dockerfile  README.md
projects/persistent-traffic-data/: README.md
scray-archetype/: README.md  archetype-catalog.xml  pom.xml
scray-cassandra/: .cache  .cache-main  .cache-tests  .gitignore  pom.xml
scray-client-jdbc/: README.md  dependencies.xml  pom.xml
scray-common/: .cache-main  pom.xml
scray-const/: pom.xml
scray-core/: pom.xml
scray-core/lib/: scalastyle_config.xml
scray-example/: .cache-main  .cache-tests  README.md  pom.xml  scalastyle_config.xml
scray-example/input-client/: pom.xml
scray-examples/: python
scray-examples/ml-job-coordination/: README.md
scray-examples/ml-job-coordination/scripts/scray_job_client/: README.md  package-lock.json  pyproject.toml
scray-examples/ml-job-coordination/scripts/scray_job_client/examples/process-new-file/: consumer-s3-new-file-notification.ipynb  producer-s3-new-file-notification.ipynb
scray-examples/ml-job-coordination/scripts/scray_job_client/examples/run-job/: run-example-job.ipynb
scray-examples/ml-job-coordination/scripts/scray_job_client/scray/job_client/: Main.py  __init__.py  cli.py  client.py  config.py  io.py
scray-examples/ml-job-coordination/scripts/scray_job_client/scray/job_client/models/: __init_.py  agent_configuration.py  cli_args.py  job_arguments.py  job_state_configuration.py  job_sync_api_data.py  pipeline_creator.py
scray-examples/ml-job-coordination/scripts/scray_job_client/scray/job_client/models/conf/: __init_.py  agent_data_io_configuration.py  job_metadata.py  s3_configuration.py  scray_job_metadata_configuration.py
scray-examples/ml-job-coordination/scripts/scray_job_client/scray_job_client/job_client/: Main.py  client copy.py  client.py  config.py
scray-examples/ml-job-coordination/scripts/scray_job_client/scray_job_client/job_client/models/: cli_args.py
scray-examples/ml-job-coordination/scripts/scray_job_client/tests/client/: test_agent_configuration.py  test_client.py  test_pipeline_creator.py
scray-examples/persistent-traffic-data/: README.md  k8s-deployment.yaml
scray-examples/python/: AnomalyDetectionConv1DAutoencoder.ipynb  AnomalyDetectionLSTMAutoencoder.ipynb  AnomalyDetectionLSTMAutoencoder.py  CSENDERENDPOINTID.ipynb  CSENDERENDPOINTID.npy  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  anomaly.ipynb  charts.py  common.ipynb  common.py  createMessageEncoders.ipynb  dfBasics.ipynb  (+54 more)
scray-hdfs/: README.md  pom.xml
scray-hdfs-writer/: README.md  pom.xml
scray-java/: pom.xml
scray-jdbc/: README.md  pom.xml
scray-loader/: README.md  pom.xml  scray-changing-dependencies.xml  scray-loader-dependencies.xml  sometimes-changing-dependencies.xml  transitive-dependencies.xml
scray-model/: pom.xml
scray-querying/: .cache  README.md  nohup.out  pom.xml
scray-querying/modules/scray_sync_client/: .gitignore  README.md  package-lock.json  pyproject.toml
scray-querying/modules/scray_sync_client/scray/client/: Main.py  __init__.py  client.py  config.py  file_client.py
scray-querying/modules/scray_sync_client/scray/client/models/: __init_.py  versioned_data.py
scray-querying/modules/scray_sync_client/tests/client/: test_client.py
scray-service/: .cache-tests  pom.xml
scray-storm/: pom.xml
scray-streaming/: .cache-main  .cache-tests  pom.xml
scray-sync/: pom.xml
(+6893 files in other folders)
