[project]
name = "scray_sync_client"
version = "0.0.1"
authors = [
  { name="Stefan Obermeier", email="st.obermeier@seeburger.de" },
]
description = "A package to interact with the scary sync API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache 2",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/scray/scray"
"Bug Tracker" = "https://github.com/scray/scray/issues"