[project]
name = "scray-sync-client"
version = "0.0.1"
authors = [
  { name="Stefan Obermeier", email="st.obermeier@example.com" },
]
description = "A package to interact with the scary sync API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  'requests ~= 2.31.0',
  'dacite'
]


[project.urls]
"Homepage" = "https://github.com/scray/scray"
"Bug Tracker" = "https://github.com/scray/scray/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scray"]

