[project]
name = "scray-job-client"
version = "0.0.1"
authors = [
  { name="Stefan Obermeier", email="st.obermeier@seeburger.de" },
]
description = "A package to interact with the scary sync API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'scray_sync_client ~= 0.0.1',
    'paramiko ~= 2.10.1'
]

[project.urls]
"Homepage" = "https://github.com/scray/scray"
"Bug Tracker" = "https://github.com/scray/scray/issues"

[project.scripts]
scray_job_client = "scray.job_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scray"]

